k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p1-backend
  labels:
    app: p1-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p1-backend
  template:
    metadata:
      labels:
        app: p1-backend
    spec:
      containers:
        - name: p1-backend
          image: ghcr.io/cs-muic/scalable-p1-settawutboss/scalable-p1:latest
          imagePullPolicy: Always
      imagePullSecrets:
        - name: myregistrykey
