k8s/backend-deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p1-backend2
  labels:
    app: p1-backend2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: p1-backend2
  template:
    metadata:
      labels:
        app: p1-backend2
    spec:
      containers:
        - name: p1-backend
          image: ghcr.io/cs-muic/scalable-p1-settawutboss/scalable-p1:latest
          imagePullPolicy: Always
      imagePullSecrets:
        - name: myregistrykey
