k8s/backend-svc2.yaml
kind: Service
apiVersion: v1
metadata:
  name: p1-backend2
spec:
  selector:
    app: p1-backend2
  type:  ClusterIP
  ports:
    - name:  http
      port:  80
      targetPort:  8080
