k8s/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: mariadb
