k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p1-deployment-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api/recents
            pathType: Exact
            backend:
              service:
                name: p1-backend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: p1-backend2
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: p1-backend2
                port:
                  number: 80
